Changed menu-switch on mobile to top-left in order to avoid being above the subtitle

--- a/sass/partials/module/partials/_slides.scss
+++ b/sass/partials/module/partials/_slides.scss
@@ -65,11 +65,14 @@
     .menu-switch {
       position: absolute;
       left: 10px;
-      bottom: 10px;
+      top: 10px;
       height: 31px;
       z-index: 500;
       @include breakpoint($break-small) {
+        left: auto;
+        top: auto;
         right: 0;
+        bottom: 10px;
       }
       p {
         float: right;
